<resources>
    <string name="app_name">타이포셔너리</string>
    <string name="title_activity_main">타이포셔너리</string>
    <string name="tab_text_1">영어단어</string>
    <string name="tab_text_2">단어장</string>
    <string name="tab_text_3">알림</string>
    <string name="tab_chat">그룹</string>

    <string name="tab_group_info">그룹 정보</string>
    <string name="tab_group_wordSet">단어장</string>
    <string name="tab_group_chat">채팅</string>


    <string name="action_settings">설정</string>
    <string name="action_profile">프로필 보기</string>
    <string name="action_logout">로그아웃</string>
    <string name="action_search">검색</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">로그인</string>
    <string name="title_activity_profile">프로필</string>

    <!-- Strings related to login -->
    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호(영어 소문자+숫자+특수문자 조합, 6~16자리)</string>

    <string name="hint_password">비밀번호</string>
    <string name="prompt_password_confirm">비밀번호 확인</string>

    <string name="prompt_birthday">생년월일 (터치하여 날짜 입력)</string>
    <string name="prompt_name">사용자 이름(한글 / 영어 대문자, 소문자 1~10자)</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_join">회원 가입</string>

    <string name="action_write">글쓰기</string>
    <string name="action_sign_in_short">Sign in</string>


    <!--회원가입 예외처리 -->

    <string name="error_invalid_email">올바른 형식의 이메일을 입력해주세요</string>
    <string name="error_invalid_password">올바른 형식의 비밀번호를 입력해주세요 (영문 + 숫자 + 특수문자 조합, 6~16자리) </string>
    <string name="error_invalid_name">올바른 형식의 이름을 입력해주세요 (한글 / 영어 대문자, 소문자 1~10자)</string>

    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">필수 항목을 반드시 입력해주세요</string>

    <string name="error_different_password">비밀번호와 비밀번호 확인이 일치하지 않습니다.</string>


    <string name="error_mail_exists">이미 가입된 이메일입니다.</string>

    <string name="error_nameBirth_exists">이미 가입된 사람입니다.(생일/이름 존재)</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_join">회원 가입</string>


    <!--쉐어드 프리퍼런스 키값들-->


    <string name="key_pref_Login">pref_login</string>

    <string name="key_pref_notification">pref_notification</string>

    <string name="LoginToken">LoginToken</string>

    <string name="cookie_email">cookie_email</string>
    <string name="cookie_name">cookie_name</string>
    <string name="cookie_birthday">cookie_birthday</string>


    <!--내가 만든 문자열들-->

    <string name="login_Or">또는</string>

    <string name="facebook_app_id">367488190367299</string>

    <string name="hello_blank_fragment">Hello this is blank fragment</string>

    <string name="hello_info_fragment">Hello this is info fragment</string>

    <bool name="called">true</bool>
    <bool name="not_called">false</bool>
    <string name="title_activity_write">WriteActivity</string>

    <string name="title_activity_comment">댓글</string>

    <string name="cookie_sessID">cookie_sessID</string>
    <string name="string_title_upload_progressbar_">이미지를 업로드 중입니다...</string>
    <string name="string_upload_success">업로드에 성공하였습니다</string>
    <string name="string_upload_fail">업로드에 실패하였습니다</string>
    <string name="help">help</string>
    <string name="string_help_text">The permission is missing.\\n\\nTo grant this permission click on Settings, then Permissions and turn the permission on.\\n\\nThen click back twice to return to the app</string>
    <string name="quit">Exit App</string>
    <string name="settings">Settings</string>
    <string name="hint_etNameWordSet">단어장 이름을 입력하세요 ...</string>
    <string name="hint_etGroupName">그룹 이름을 입력하세요 ...</string>

    <string name="action_confirm">확인</string>
    <string name="action_exit_chat">채팅 나가기</string>
    <string name="action_leave_group">그룹 탈퇴</string>


    <string name="chatdb_name">dbChat.db</string>
    <string name="action_edit_member">회원 관리</string>
    <string name="action_give_admin">그룹장 위임</string>
    <string name="action_delete_member">회원 삭제</string>
    <string name="action_delete_done">삭제 완료</string>
    <string name="action_refuse_notification">알림 거부</string>
    <string name="action_apply_notification">알림 허용</string>

</resources>
