<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nova.typoapp.MainActivity">


    <item
        android:id="@+id/action_delete_done"
        android:orderInCategory="90"
        android:title="@string/action_delete_done"
        android:icon="@drawable/ic_done_white_24dp"
        app:showAsAction="always" />

    <!--알림 허용->거부-->
    <item
        android:id="@+id/action_refuse_notification"
        android:orderInCategory="91"
        android:title="@string/action_refuse_notification"
        android:icon="@drawable/ic_notifications_none_white_24dp"
        app:showAsAction="always" />

    <!--알림 거부->허용-->
    <item
        android:id="@+id/action_apply_notification"
        android:orderInCategory="92"
        android:title="@string/action_apply_notification"
        android:icon="@drawable/ic_notifications_off_white_24dp"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="97"
        android:title="@string/action_settings"
        app:showAsAction="never" />



    <item
        android:id="@+id/action_delete_member"
        android:orderInCategory="98"
        android:title="@string/action_delete_member"
        app:showAsAction="never" />

    <!--<item-->
        <!--android:id="@+id/action_give_admin"-->
        <!--android:orderInCategory="99"-->
        <!--android:title="@string/action_give_admin"-->
        <!--app:showAsAction="never" />-->



    <item
        android:id="@+id/action_exit_chat"
        android:orderInCategory="100"
        android:title="@string/action_exit_chat"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_leave_group"
        android:orderInCategory="999"
        android:title="@string/action_leave_group"
        app:showAsAction="never" />



</menu>
