<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nova.typoapp.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"


        android:title="@string/action_search"
        app:showAsAction="ifRoom"/>
    <!--app:actionViewClass="android.support.v7.widget.SearchView"-->

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:title="@string/action_profile"
        android:id="@+id/action_profile"

        android:orderInCategory="99"
        app:showAsAction="never"
        />

    <item
        android:title="@string/action_logout"
        android:id="@+id/action_logout"

        android:orderInCategory="101"
        app:showAsAction="never"
        />




</menu>
