<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CoordLayoutGroup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="nova.typoapp.group.GroupActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarGroup"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"

            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

            <!--app:layout_scrollFlags="scroll|enterAlways"-->

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayoutGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tabGroupInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_group_info" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabGroupWordSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_group_wordSet" />


            <android.support.design.widget.TabItem
                android:id="@+id/tabGroupChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_group_chat" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/ViewPagerGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>
