<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nova.typoapp.JoinActivity"



    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"


            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText

                    style="@style/textForm"
                    android:id="@+id/editBirthday"


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:hint="@string/prompt_birthday"

                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:focusable="false"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText

                    style="@style/textForm"
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"

                    android:imeOptions="actionNext"

                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:nextFocusDown="@+id/editBirthday"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    style="@style/textForm"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:nextFocusDown="@+id/editPassword"/>

            </android.support.design.widget.TextInputLayout>

            <!--android:imeActionId="6"-->
            <!--android:imeActionLabel="@string/action_sign_in_short"-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/textForm"
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"

                    android:imeOptions="actionNext"

                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:nextFocusDown="@+id/textPasswordConf"/>

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/textPasswordConf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/textForm"
                    android:id="@+id/editPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password_confirm"

                    android:imeOptions="actionDone"

                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>






            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_join"
                android:textStyle="bold" />
        </LinearLayout>


    </ScrollView>
</LinearLayout>
